force-app/main/default/objects/Primary_Sales_Rep__c/fields/VBO_Monthly_Activity_Trend_Report__c.field-meta.xml
<CustomField>
    <fullName>VBO_Monthly_Activity_Trend_Report__c</fullName>
    <description>/* Builds a link based on the SAP BI Reports Setting custom setting to concatenate the URL, Report Id, encoded auth token, and whatever parameter values are required for this report to run, in this case the upper case value of the NetworkID */   Data questions should go to sales manager, SM to go to Optymyz or FP&amp;A</description>
    <formula>/* If the running user&apos;s email is within the PSR&apos;s email hierarchy, then they have access to their reports. Additionally, if the running user is a sales admin, system admin, or support role, they have access. Otherwise, they will not and they cannot click on the report. */

IF(
OR( 
UPPER($User.Network_Id__c)  = UPPER(Network_ID__c) , 
SUBSTITUTE( $User.Email , &quot;=veritivcorp.com@example.com&quot;, &quot;@veritivcorp.com&quot;) = SF_userid__r.ZM_SM_Email__c, 
SUBSTITUTE( $User.Email , &quot;=veritivcorp.com@example.com&quot;, &quot;@veritivcorp.com&quot;) = SF_userid__r.Dir_Email__c, 
SUBSTITUTE( $User.Email , &quot;=veritivcorp.com@example.com&quot;, &quot;@veritivcorp.com&quot;) = SF_userid__r.GSM_Email__c , 
SUBSTITUTE( $User.Email , &quot;=veritivcorp.com@example.com&quot;, &quot;@veritivcorp.com&quot;) = SF_userid__r.Vice_President_Email__c, 
SUBSTITUTE( $User.Email , &quot;=veritivcorp.com@example.com&quot;, &quot;@veritivcorp.com&quot;) = SF_userid__r.Pres_Email__c , 
$User.ProfileId =&quot;00e70000000swa5&quot;, 
$User.ProfileId =&quot;00e5w000001nr4W&quot;,
$User.ProfileId =&quot;00e39000001BiUg&quot;, 
$User.ProfileId =&quot;00e70000000zomX&quot;,
$User.ProfileId =&quot;00e5w000001xyQb&quot;, /*CS - Support Restricted - Lightning*/
$User.ProfileId =&quot;00e5w000001xwik&quot;, /*CS - Lightning Console*/
$User.ProfileId =&quot;00e39000001SAlb&quot;,  
$User.ProfileId =&quot;00e70000001JmPN&quot;,
$User.ProfileId =&quot;00ef2000001nr42&quot;, 
$User.ProfileId =&quot;00e70000000jhbJ&quot;, 
$UserRole.Id=&quot;00E70000000kyXW&quot;,
$User.ProfileId=&quot;00e39000001FvQr&quot;,
$User.ProfileId=&quot;00e39000001FvQm&quot;,
$User.ProfileId =&quot;00ef2000000zI8N&quot;,
$User.ProfileId =&quot;00ef2000000zI8c&quot;
),

/* Builds a link based on the SAP BI Reports Setting custom setting to concatenate the URL, Report Id, encoded auth token, and whatever parameter values are required for this report to run, in this case the upper case value of the NetworkID */
HYPERLINK($Setup.SAP_BI_Reports_Setting__c.SAP_Report_Base_URL__c 
&amp;&quot;&amp;iDocID=&quot;
&amp; $Setup.SAP_BI_Reports_Setting__c.Monthly_Activity_Trend_Report_CUID__c

&amp;&quot;&amp;token=&quot;
&amp;$Setup.SAP_BI_Reports_Setting__c.Encoded_Token__c &amp;$Setup.SAP_BI_Reports_Setting__c.Encoded_Token_Overflow__c

&amp;&quot;&amp;sOutputFormat=P&quot; 

&amp;&quot;&amp;lsMEnter+value(s)+for+Sales+Representative+Network+ID=&quot;
&amp; UPPER(Network_ID__c) , 

/* Text below is what they can see/click on if they have access to the PSR&apos;S data */
&quot;Activity Trend Report-Sales Rep Detail&quot;),

/* Text below is show to the running user if they can&apos;t access the PSR&apos;s data in VBO */
&quot;You do not have permission to view this report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click this link to access VBO reporting.</inlineHelpText>
    <label>Activity Trend Report-Sales Rep Detail</label>
    <type>Text</type>
</CustomField>