force-app/main/default/objects/Primary_Sales_Rep__c/fields/Vertical_Major_Page__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Major_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical Major Page</label>
    <referenceTo>Verticals__c</referenceTo>
    <relationshipLabel>Primary Sales Reps - Major Vertical</relationshipLabel>
    <relationshipName>Primary_Sales_Reps1</relationshipName>
    <type>Lookup</type>
</CustomField>