force-app/main/default/objects/Primary_Sales_Rep__c/fields/Vertical_Minor__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Minor__c</fullName>
    <description>Assigns Minor Vertical to a PSR</description>
    <label>Vertical Minor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building Service Contractors</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food Processing</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Graphic Design/Advertising</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Health Clubs</fullName>
            </value>
            <value>
                <fullName>Hospitality/Lodging</fullName>
            </value>
            <value>
                <fullName>Large Venue</fullName>
            </value>
            <value>
                <fullName>Manufacturing (non food/print)</fullName>
            </value>
            <value>
                <fullName>Printer - Commercial/Sheet Fed</fullName>
            </value>
            <value>
                <fullName>Printer - Digital/Wide Format</fullName>
            </value>
            <value>
                <fullName>Printer - Gang Run</fullName>
            </value>
            <value>
                <fullName>Printer - In-plant</fullName>
            </value>
            <value>
                <fullName>Printer - Packaging</fullName>
            </value>
            <value>
                <fullName>Printer - Sheetfed/Web Combo</fullName>
            </value>
            <value>
                <fullName>Printer - Web</fullName>
            </value>
            <value>
                <fullName>Printer – Other</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Redistribution - FS</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>