force-app/main/default/objects/Primary_Sales_Rep__c/fields/Vertical_Minor_Page__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Minor_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical Minor Page</label>
    <referenceTo>Verticals__c</referenceTo>
    <relationshipLabel>Primary Sales Reps - Minor Vertical</relationshipLabel>
    <relationshipName>Primary_Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>