force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_Accounts_without_Contacts__c.field-meta.xml
<CustomField>
    <fullName>View_Accounts_without_Contacts__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000004pyGIEAY/view?fv2=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O39000004pyGIEAY?pv2=&quot;)

/* Append the PSR Name?fv2= */
&amp;   Name   ,
 
/* Specify the link text */
&quot;Accounts without Contacts&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Accounts without Contacts</label>
    <type>Text</type>
</CustomField>