force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_Rep_s_Acct_Reassignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>View_Rep_s_Acct_Reassignment_Notes__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000005S3hBEAS/view?fv1=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O21000000ILty?pv1=&quot;)

/* Append the PSR Name */
&amp;   Name   ,
 
/* Specify the link text */
&quot;View Rep&apos;s Account Reassignment Notes&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Rep&apos;s Acct Reassignment Notes</label>
    <type>Text</type>
</CustomField>