force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_Rep_s_Outgoing_Account_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>View_Rep_s_Outgoing_Account_Reassignment__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;#/sObject/00O39000005S5Kn/view?fv1=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O39000005S5Kn?pv1=&quot;) 

/* Append the PSR Name */ 
&amp; Name , 

/* Specify the link text */ 
&quot;View Rep&apos;s Outgoing Account Reassignment&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Rep&apos;s Outgoing Account Reassignment</label>
    <type>Text</type>
</CustomField>