force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_SM_Acct_Reassignments_Activity__c.field-meta.xml
<CustomField>
    <fullName>View_SM_Acct_Reassignments_Activity__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000005S5JaEAK/view?fv3=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O21000000IOTt?pv3=&quot;)

/* Append the SM email */ 
&amp;  email_dir__c  , 
 
/* Specify the link text */
&quot;View SM Account Reassignments Activity&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View SM Acct Reassignments Activity</label>
    <type>Text</type>
</CustomField>