force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_SM_Team_Active_Leads__c.field-meta.xml
<CustomField>
    <fullName>View_SM_Team_Active_Leads__c</fullName>
    <description>Modified 8/2 to include both parameter values. Replicates the custom link of the same name for use on the reporting tab.</description>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000005Y8Mc/view?fv0=&quot;&amp;name_zm_sm__c&amp;&quot;&amp;fv1=&quot;&amp;name_zm_sm__c,

/* Otherwise use Classic syntax */
&quot;/00O39000005Y8Mc?pv0=&quot;&amp;name_zm_sm__c&amp;&quot;&amp;pv1=&quot;&amp;name_zm_sm__c),


/* Specify the link text */
&quot;View SM Team Active Leads&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View SM Team Active Leads</label>
    <type>Text</type>
</CustomField>