force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_SM_Team_Activities_Summary__c.field-meta.xml
<CustomField>
    <fullName>View_SM_Team_Activities_Summary__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000005coZh/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O39000005coZh?pv0=&quot;)

/* Append the GM created by Name */ 
&amp; CreatedBy.name_zm_sm__c, 
 
/* Specify the link text */
&quot;View SM Team Activities - Summary&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View SM Team Activities - Summary</label>
    <type>Text</type>
</CustomField>