force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_SM_Team_Activity_Lightning__c.field-meta.xml
<CustomField>
    <fullName>View_SM_Team_Activity_Lightning__c</fullName>
    <description>Testing URL hack</description>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000004pucOEAQ/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O39000004pucOEAQ?pv0=&quot;)

/* Append the GM created by Name */
&amp; CreatedBy.name_zm_sm__c,
 
/* Specify the link text */
&quot;View SM Team Activities&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Test URL hack</inlineHelpText>
    <label>View SM Team Activities</label>
    <type>Text</type>
</CustomField>