force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_Teams_Account_Diagnostic_Report__c.field-meta.xml
<CustomField>
    <fullName>View_Teams_Account_Diagnostic_Report__c</fullName>
    <description>Item-3167: link to the Account Diagnostic Report for the Sales Playbook initiative</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O5w00000AV5XeEAL/view&quot;,

/* link text */
&quot;View Team&apos;s Account Diagnostic Report&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <label>View Team&apos;s Account Diagnostic Report</label>
    <type>Text</type>
</CustomField>