force-app/main/default/objects/Primary_Sales_Rep__c/fields/View_VP_GM_or_SM_SD_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>View_VP_GM_or_SM_SD_Pipeline__c</fullName>
    <description>Replicated to match the custom link of the same name for use on the reporting tab. Modified 8/2 to fix filter values.</description>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;#/sObject/00O70000002vaHGEAY/view?fv1=&quot;&amp;Aliases__c&amp;&quot;&amp;fv2=&quot;&amp;Aliases__c&amp;&quot;&amp;fv3=&quot;&amp;Aliases__c&amp;&quot;&amp;fv4=&quot;&amp;Aliases__c&amp;&quot;&amp;fv5=&quot;&amp;Aliases__c&amp;&quot;&amp;fv6=&quot;&amp;Aliases__c&amp;&quot;&amp;fv7=&quot;&amp;Aliases__c&amp;&quot;&amp;fv8=&quot;&amp;Aliases__c, 

/* Otherwise use Classic syntax */ 
&quot;/00O39000005coZh?pv1=&quot;&amp;Aliases__c&amp;&quot;&amp;pv2=&quot;&amp;Aliases__c&amp;&quot;&amp;pv3=&quot;&amp;Aliases__c&amp;&quot;&amp;pv4=&quot;&amp;Aliases__c&amp;&quot;&amp;pv5=&quot;&amp;Aliases__c&amp;&quot;&amp;pv6=&quot;&amp;Aliases__c&amp;&quot;&amp;pv7=&quot;&amp;Aliases__c&amp;&quot;&amp;pv8=&quot;&amp;Aliases__c) 

,
/* Specify the link text */ 
&quot;View VP, GM or SM/SD Pipeline&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View VP, GM or SM/SD Pipeline</label>
    <type>Text</type>
</CustomField>