force-app/main/default/objects/Primary_Sales_Rep__c/fields/VIQ_UPPER_NetworkId_PSR__c.field-meta.xml
<CustomField>
    <fullName>VIQ_UPPER_NetworkId_PSR__c</fullName>
    <description>Uppercase of the NetworkId to accommodate for case sensitivity in the Zilliant db when querying for PSRs to set as the Primary_Sales_Rep_Name of VIQ opportunities</description>
    <formula>UPPER( Network_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>UPPER(Network_Id__c)</inlineHelpText>
    <label>VIQ UPPER NetworkId</label>
    <type>Text</type>
</CustomField>