force-app/main/default/objects/Primary_Sales_Rep__c/fields/VOS_Pricing_Operations_Zilliant_Team__c.field-meta.xml
<CustomField>
    <fullName>VOS_Pricing_Operations_Zilliant_Team__c</fullName>
    <formula>hyperlink(&quot;http://teams.srv.unisourcelink.net/PricingOperations/default.aspx&quot;,&quot;VOS - Pricing Operations/Zilliant Team Site&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOS - Pricing Operations/Zilliant Team</label>
    <type>Text</type>
</CustomField>