force-app/main/default/objects/Primary_Sales_Rep__c/fields/VP_or_RVP_ZM_Open_Opportunity_Report__c.field-meta.xml
<CustomField>
    <fullName>VP_or_RVP_ZM_Open_Opportunity_Report__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O70000002vaHG/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O70000002vaHG?pv0=&quot;)

/* Append the PSR Name */
 &amp; Name,
 
/* Specify the link text */
&quot;VP or RVP/ZM Open Opportunity Report&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP or RVP/ZM Open Opportunity Report</label>
    <type>Text</type>
</CustomField>