force-app/main/default/objects/Primary_Sales_Rep__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>&quot;DO NOT EDIT THIS REP’S NAME. If you need to change the Rep on an Oppty or Account, go directly to that record, click Edit, and then use the Lookup button to correct it.&quot;</defaultValue>
    <inlineHelpText>DO NOT EDIT THIS REP’S NAME. If you need to change the Rep on an Oppty or Account, go directly to that record, click Edit, and then use the Lookup button to correct it.</inlineHelpText>
    <label>Warning!</label>
    <type>TextArea</type>
</CustomField>