force-app/main/default/objects/Primary_Sales_Rep__c/fields/Work_Orders_I_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Work_Orders_I_Submitted__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;#/sObject/00O390000057Ohd/view?fv0=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O390000057Ohd?pv0=&quot;) 

/* Append the PSR Name */ 
&amp; Name, 

/* Specify the link text */ 
&quot;Work Orders I Submitted&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Orders I Submitted</label>
    <type>Text</type>
</CustomField>