force-app/main/default/objects/Primary_Sales_Rep__c/validationRules/Only_DW_can_change_PSR_Names.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_DW_can_change_PSR_Names</fullName>
    <active>true</active>
    <description>Prevents users from altering the Primary Sales Rep&apos;s name</description>
    <errorConditionFormula>AND( 

ISCHANGED( Name ), 

$User.ProfileId &lt;&gt; &quot;00e70000000j606&quot;, 
$User.ProfileId &lt;&gt; &quot;00e70000000swa5&quot;, 
$User.ProfileId&lt;&gt; &quot;00e70000000jhij&quot;,
$User.ProfileId&lt;&gt; &quot;00e5w000001nsDI&quot; 

) 

/* 
Profile Names 
00e70000000j606 = API Admin 
00e70000000swa5 = System Admin
00e5w000001nsDI = Training &amp; Support (provisioning) 
00e70000000jhij = Testing - Cara 
*/</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Primary Sales Reps&apos; Names can only be changed via automated data feeds.</errorMessage>
</ValidationRule>