force-app/main/default/objects/Primary_Sales_Rep__c/listViews/All_Canada.listView-meta.xml
<ListView>
    <fullName>All_Canada</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Country__c</columns>
    <columns>Email__c</columns>
    <columns>Reports_To__c</columns>
    <columns>name_zm_sm__c</columns>
    <columns>name_gsm__c</columns>
    <columns>name_bdm_rvp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>CAN</value>
    </filters>
    <label>All - Canada</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Users</group>
    </sharedTo>
</ListView>