force-app/main/default/objects/Primary_Sales_Rep__c/listViews/iReps.listView-meta.xml
<ListView>
    <fullName>iReps</fullName>
    <columns>NAME</columns>
    <columns>iRep_Indicator__c</columns>
    <columns>iRep_Org__c</columns>
    <columns>Reports_To__c</columns>
    <columns>user_profile__c</columns>
    <columns>user_role__c</columns>
    <columns>Reports_To_Network_ID_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>iRep_Indicator__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <label>iReps</label>
    <language>en_US</language>
</ListView>