force-app/main/default/objects/Primary_Sales_Rep__c/listViews/My_PSRs.listView-meta.xml
<ListView>
    <fullName>My_PSRs</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Primary Sales Rep Page</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Users</group>
    </sharedTo>
</ListView>