force-app/main/default/objects/Primary_Sales_Rep__c/listViews/PSRs_w_o_Associated_Users.listView-meta.xml
<ListView>
    <fullName>PSRs_w_o_Associated_Users</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SF_userid__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>deactivated_user__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2011 12:00 AM</value>
    </filters>
    <label>PSRs w/o Associated Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Users</group>
    </sharedTo>
</ListView>