force-app/main/default/objects/Primary_Sales_Rep__c/listViews/PSRs_with_Servicing_Divisions.listView-meta.xml
<ListView>
    <fullName>PSRs_with_Servicing_Divisions</fullName>
    <columns>NAME</columns>
    <columns>Servicing_Division__c</columns>
    <columns>name_gsm__c</columns>
    <columns>name_zm_sm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Servicing_Division__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PSRs with Servicing Divisions</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>